@@ -129,9 +129,9 @@
   <td></td>\n
 </tr>\n
 <tr>\n
-  <td>clickAndWait</td>\n
-  <td>link=Events</td>\n
-  <td></td>\n
+  <td>selectAndWait</td>\n
+  <td>//select[@name="select_module"]</td>\n
+  <td>Events</td>\n
 </tr>\n
 <tr>\n
   <td>verifyText</td>\n
